--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<div
+<header
   class="flex h-[75px] flex-row justify-between items-center container mx-auto px-5">
   <a
     href="/"
@@ -32,7 +32,7 @@
       </svg>
     </a>
   </div>
-</div>
+</header>
 <div class="w-full h-[2px] bg-white/20"></div>
 
 <style></style>
