--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -16,7 +16,7 @@ const { title, body, icon, href } = Astro.props;
                 <img hidden={!icon} class="aspect-square h-8 w-8" src={icon} alt={title  + ' Icon'}>
                 <h2>{title}</h2>
             </div>
-            <span class="text-3xl">&rarr;</span>
+            <!-- <span class="text-3xl">&rarr;</span> -->
         </div>
         <p>
             {body}
