--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -154,7 +154,7 @@ function arrayTill(n: number) {
       </div>
       <p
         id="scroll-for-more"
-        class="text-white/75 absolute bottom-5 animate-bounce flex flex-row gap-1 items-center justify-center transition duration-200">
+        class="hidden md:flex text-white/75 absolute bottom-5 animate-bounce flex-row gap-1 items-center justify-center transition duration-200">
         <svg class="h-7" viewBox="0 0 24 24"
           ><path
             fill="currentColor"
@@ -208,7 +208,7 @@ function arrayTill(n: number) {
         class="flex flex-col xl:flex-row gap-5 items-center justify-center my-12"
         aria-labelledby="Yuuko loves open-source">
         <img
-          src="https://i.imgur.com/8fFCTX1.png"
+          src="/yuuko.png"
           alt="Yuuko Logo"
           class="w-48 h-48 rounded-full border-4 border-sakura-500 p-2"
         />
