--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,7 +22,7 @@ const { title } = Astro.props;
   </head>
   <body>
     <Header />
-    <div class="p-2 mx-auto container">
+    <div class="p-5 sm:p-2 mx-auto container">
       <slot />
     </div>
     <Footer />
