chore: convert images to .webp format

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -128,7 +128,7 @@ function arrayTill(n: number) {
         </span> -->
         <img
           class="absolute right-[40px] top-[5px] h-[6rem] rotate-45 select-none"
-          src="/petals.png"
+          src="/petals.webp"
           alt=""
         />
         <div
@@ -208,7 +208,7 @@ function arrayTill(n: number) {
         class="flex flex-col xl:flex-row gap-5 items-center justify-center my-12"
         aria-labelledby="Yuuko loves open-source">
         <img
-          src="/yuuko.png"
+          src="/yuuko.webp"
           alt="Yuuko Logo"
           class="w-48 h-48 rounded-full border-4 border-sakura-500 p-2"
         />
@@ -288,7 +288,7 @@ function arrayTill(n: number) {
           data-tilt
           data-tilt-scale="0.95"
           class="max-w-[300px] xl:max-w-[600px]"
-          src="/tech-honeycomb.png"
+          src="/tech-honeycomb.webp"
           alt="Tech Honeycomb"
         />
       </div>
