style: Make header and footer separation pop a bit more

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,4 +1,4 @@
-<footer class="border-t h-[50px] border-white/25">
+<footer class="border-t h-[50px] border-sakura-500 bg-y-gray/50">
   <div class="w-full p-4 md:flex md:items-center md:justify-between">
     <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400"
       >© 2023 <a href="https://github.com/YuuCorp/" class="hover:underline"
