--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -23,7 +23,7 @@
           </path>
         </svg>
       </a>
-      <a href="https://discord.gg/dD3y8QDy" target="_blank" class="generic-hover">
+      <a href="https://discord.gg/DUCEj7vqKD" target="_blank" class="generic-hover">
         <svg
           class="fill-white ease-in hover:fill-sakura-500 transition-colors w-7"
           viewBox="0 0 24 24">
